# swift-common

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt
include/swift-common/: swift-common.hpp
source/: swift-common.cpp
test/: CMakeLists.txt
test/source/: swift-common_test.cpp
